# wikipedia-contexto

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: api.py  main.py
backend/data/glove_embeddings/: words.txt
frontend/src/: App.css  App.jsx
notebooks/: graph.ipynb  pyproject.toml
